--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -15,7 +15,7 @@
     <add key="Help" value="Help\AutomateAis3Full.pdf" /><!--Помощь пользователю-->
     <add key="ServerReport" value="http://i7751-w40204180:8181/ServiceRest/MigrationError" /><!--Сервер создания отчетов по миграции Письма-->
     <add key="ServerRuleUsersWordTemplate" value="http://i7751-w40204180:8181/ServiceRest/GenerateTemplateRule" /><!--Сервис создания заявок доступа на подпись-->
-    <add key="LoadInfoTemplate" value="http://localhost:8181/ServiceRest/LoadInfoTemplateToDataBase"/><!--Сервис загрузки шаблонов и ролей в БД-->
+    <add key="LoadInfoTemplate" value="http://i7751-w40204180:8181/ServiceRest/LoadInfoTemplateToDataBase"/><!--Сервис загрузки шаблонов и ролей в БД-->
     <add key="AllListModel" value="XmlFile/AutoGenerateSchemes.xml"/><!--Новая схема генерации все списки в одной модели КРУТО-->
     <add key="FileFid" value="XmlFile/Fid.xml" /><!--Путь к файлу ФИД по схеме FidZemlyOrImushestvo.xsd-->
     <add key="FileInn" value="XmlFile/Inn.xml" /><!--Путь к файлу ИНН по схеме SnuOneForm.xsd-->
@@ -28,6 +28,7 @@
     <add key="ReportMigration" value="XmlJurnal/ReportMigration.xml" /><!--Журнал миграции по схеме ReportMigration.xsd-->
     <add key="UserRule" value="XmlJurnal/UserRule.xml" /><!--Журнал миграции по схеме UserRule.xsd-->
     <add key="InfoRuleTemplate" value="XmlJurnal/InfoRuleTemplate.xml"/><!--Информация по ролям и шаблонам собранным в АИС 3-->
+    <add key="InfoUserTemplateRule" value="XmlJurnal/InfoUserTemplateRule.xml"/><!--Информация по пользователям и их ролях и шаблонах собранным в АИС 3-->
     <add key="FileSpisok" value="FormXml/" /><!--Папка для формирование -->
     <add key="PathJurnal" value="XmlJurnal/" /><!--Путь к журналам-->
     <add key="PathInn" value="XmlFile/" /><!--Путь к спискам значений-->
