--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -13,9 +13,10 @@
   <appSettings>
     <add key="Ifns" value="7751" /><!--ИФНС для выборок-->
     <add key="Help" value="Help\AutomateAis3Full.pdf" /><!--Помощь пользователю-->
-    <add key="ServerReport" value="http://i7751-w40204180:8181/ServiceRest/MigrationError" /><!--Сервер создания отчетов по миграции Письма-->
-    <add key="ServerRuleUsersWordTemplate" value="http://i7751-w40204180:8181/ServiceRest/GenerateTemplateRule" /><!--Сервис создания заявок доступа на подпись-->
-    <add key="LoadInfoTemplate" value="http://i7751-w40204180:8181/ServiceRest/LoadInfoTemplateToDataBase"/><!--Сервис загрузки шаблонов и ролей в БД-->
+    <add key="HostNameService" value="localhost"/><!--Host моделей api-->
+    <add key="ServiceModelInventory" value="http://i7751-w40204180:8181/ServiceRest/GetServiceApi"/><!--Сервис загрузки моделей сервиса отчетов-->
+    <add key="ServiceGetOrPost" value="http://i7751-w40204180:8050/ServiceAutomation/LoadModelPreCheck"/><!--Адрес сервиса Володи http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais для получения данных Адрес сервиса мой http://localhost:8050/ServiceAutomation/LoadModelPreCheck-->
+    <add key="AllTemplate" value="http://i7751-w40204180:8050/ServiceAutomation/LoadAllTemplateDb"/><!--Шаблоны для загрузки моделей шаблонов для автомата-->
     <add key="AllListModel" value="XmlFile/AutoGenerateSchemes.xml"/><!--Новая схема генерации все списки в одной модели КРУТО-->
     <add key="FileFid" value="XmlFile/Fid.xml" /><!--Путь к файлу ФИД по схеме FidZemlyOrImushestvo.xsd-->
     <add key="FileInn" value="XmlFile/Inn.xml" /><!--Путь к файлу ИНН по схеме SnuOneForm.xsd-->
@@ -36,8 +37,6 @@
     <add key="PathPdfWork" value="PdfReport/" /><!--Путь к PDF файлам!!!-->
     <add key="ExeptionsIfns" value="" /><!--ИНН для исключения-->
     <add key="WebSite" value="http://i7751-app127:8095/"/>
-    <add key="ServiceGetOrPost" value="http://i7751-w40204180:8050/ServiceAutomation/LoadModelPreCheck"/> <!--Адрес сервиса Володи http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais для получения данных Адрес сервиса мой http://localhost:8050/ServiceAutomation/LoadModelPreCheck-->
-    <add key="AllTemplate" value="http://i7751-w40204180:8050/ServiceAutomation/LoadAllTemplateDb"/>
     <add key="PathDownloads" value="C:\Users\{0}\Downloads\"/> <!--Путь сохранения выписок из банков подстановка Логина-->
     <add key="PathXsdScheme" value="XsdShemeLoad/" /><!--Путь к Xsd схемам-->
     <add key="PathDownloadTempXml" value="DownloadTempXml/" /><!--Выгрузка xml файлов-->
